--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-bootstrap-icons": "^1.11.6",
     "react-dom": "^19.1.0",
     "react-icons": "^5.5.0",
+    "react-router-dom": "^7.6.1",
     "react-scroll": "^1.9.3",
     "react-simple-typewriter": "^5.0.1"
   },
